# CardForge

./: README.md  card_forge  forge_prepare  layout.template  layout.yaml  pyproject.toml
assets/: fs_disk_layout.template
examples/dospt/: image.yaml
examples/gpt/: .gitignore  image.yaml
examples/gpt/partitions_data/bootfs/: .gitignore
fs_generators/: ext4  ext4.py  fat16.py  fat32  fat32.py  generate_fat32_image  squashfs  squashfs.py
layouts/: .gitignore  dos_layout.yaml  gpt_layout.yaml
lib/: base_storage_entities.py  configuration_generators.py  dos_storage.py  gpt_storage.py  image_utils.py  preconfigurators.py  storage.py
