[tool.poetry]
name = "cardforge"
version = "1.0.0"
description = ""
package-mode = false
authors = ["Dima Kushchevskyi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
